--- a/html-source/reservation.html
+++ b/html-source/reservation.html
@@ -5,101 +5,278 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <style>
-        .my-footer{
-            height: 5rem;
-            background-color: #163b65;
-            padding: 1rem;
-            margin-top: 1.5rem;
-            color: white;
-            font-size: 80%;
-        }
-    </style>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet"
+          href="https://cdn.jsdelivr.net/npm/vanillajs-datepicker@1.3.4/dist/css/datepicker-bs5.min.css">
+    <link rel="stylesheet" type="text/css" href="https://unpkg.com/notie/dist/notie.min.css">
+    <link rel="stylesheet" href="./static/css/styles.css">
     <title>Document</title>
 </head>
 <body>
 
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="#">Navbar</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-                    aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="index.html">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="about.html">About</a>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                           data-bs-toggle="dropdown" aria-expanded="false">
-                            Rooms
-                        </a>
-                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="generals.html">General's Quarter</a></li>
-                            <li><a class="dropdown-item" href="majors.html">Major's Suite</a></li>
-                        </ul>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="reservation.html" tabindex="-1" aria-disabled="true">Book now</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="contact.html" tabindex="-1" aria-disabled="true">Contact</a>
-                    </li>
-                </ul>
-            </div>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container-fluid">
+        <a class="navbar-brand" href="#">Navbar</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="about.html">About</a>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                       data-bs-toggle="dropdown" aria-expanded="false">
+                        Rooms
+                    </a>
+                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <li><a class="dropdown-item" href="generals.html">General's Quarter</a></li>
+                        <li><a class="dropdown-item" href="majors.html">Major's Suite</a></li>
+                    </ul>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="reservation.html" tabindex="-1" aria-disabled="true">Book now</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="contact.html" tabindex="-1" aria-disabled="true">Contact</a>
+                </li>
+            </ul>
         </div>
-    </nav>
+    </div>
+</nav>
 
-    <div class="container">
-        <div class="row">
-            <div class="col-md-3">
+<div class="container">
+    <div class="row">
+        <div class="col-md-3">
 
-            </div>
-            <div class="col-md-5">
-                <h1 class="mt-5">Search for availability.</h1>
+        </div>
+        <div class="col-md-5">
+            <h1 class="mt-5">Search for availability.</h1>
 
-                <form action="reservation.html" method="get">
-                    <div class="row">
-                        <div class="col mb-3">
-                            <label for="start_date" class="form-label">Starting date</label>
-                            <input required type="date" class="form-control" name="start_date" id="start_date" aria-describedby="startDateHelp">
-                            <div id="startDateHelp" class="form-text">Enter your starting date in the form of YYYY-MM-DD.</div>
-                        </div>
-                        <div class="col mb-3">
-                            <label for="end_date" class="form-label">Ending date</label>
-                            <input required type="date" class="form-control" name="end_date" id="end_date" aria-describedby="startDateHelp">
-                            <div id="endDateHelp" class="form-text">Enter your starting date in the form of YYYY-MM-DD.</div>
+            <form action="reservation.html" method="get" novalidate class="needs-validation">
+                <div class="row">
+                    <div class="col">
+                        <div class="row" id="reservation-dates">
+                            <div class="col">
+                                <input autocomplete="never" required type="text" name="start" class="form-control"
+                                       placeholder="Arrival date">
+                            </div>
+                            <div class="col">
+                                <input required type="text" name="end" class="form-control" placeholder="Departure">
+                            </div>
                         </div>
                     </div>
-                    <button type="submit" class="btn btn-primary">Search Availability</button>
-                </form>
+                </div>
 
-            </div>
+                <hr>
+
+                <button type="submit" class="btn btn-primary">Search Availability</button>
+            </form>
+
         </div>
     </div>
 
-
-    <div class="container-fluid">
-        <div class="row my-footer">
-            <div class="col">
-                Left
-            </div>
-            <div class="col">
-                Middle
-            </div>
-            <div class="col">
-                Right
-            </div>
+    <div class="row">
+        <div class="col">
+            <p id="myParagraph">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+            </p>
+            <p>
+                <button id="colorButton" class="btn btn-outline-primary">
+                    Click me
+                </button>
+            </p>
         </div>
     </div>
+</div>
 
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+<div class="container-fluid">
+    <div class="row my-footer">
+        <div class="col">
+            Left
+        </div>
+        <div class="col">
+            Middle
+        </div>
+        <div class="col">
+            Right
+        </div>
+    </div>
+</div>
+
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/vanillajs-datepicker@1.3.4/dist/js/datepicker-full.min.js"></script>
+<script src="https://unpkg.com/notie"></script>
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+<script>
+    let attention = Prompt();
+    // Example starter JavaScript for disabling form submissions if there are invalid fields
+    (() => {
+        'use strict'
+
+        // Fetch all the forms we want to apply custom Bootstrap validation styles to
+        const forms = document.querySelectorAll('.needs-validation')
+
+        // Loop over them and prevent submission
+        Array.from(forms).forEach(form => {
+            form.addEventListener('submit', event => {
+                if (!form.checkValidity()) {
+                    event.preventDefault()
+                    event.stopPropagation()
+                }
+
+                form.classList.add('was-validated')
+            }, false)
+        })
+    })()
+
+    const elem = document.getElementById('reservation-dates');
+    const rangepicker = new DateRangePicker(elem, {
+        format: "yyyy-mm-dd"
+    });
+
+
+    document.getElementById("colorButton").addEventListener("click", function () {
+        let html = `
+        <form id="check-availability-form" action="" method="post" novalidate class="needs-validation">
+            <div class="row">
+                <div class="col">
+                    <div class="row" id="reservation-dates-modal">
+                        <div class="col">
+                            <input disabled type="text" class="form-control" required name="start" id="start" placeholder="Arrival">
+                        </div>
+                        <div class="col">
+                            <input disabled type="text" class="form-control" required name="end" id="end" placeholder="Departure">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </form>
+        `;
+        attention.custom({msg:html,title:"Choose your dates."});
+    })
+
+    function notify(msg, msgType) {
+        notie.alert({
+            type: msgType,
+            text: msg,
+        })
+    }
+
+    function notifyModal(title, text, icon, confirmationButton) {
+        Swal.fire({
+            title: title,
+            html: text,
+            icon: icon,
+            confirmButtonText: confirmationButton
+        })
+    }
+
+    function Prompt() {
+        let toast = function (c) {
+            const {
+                msg = "",
+                icon = "success",
+                position = "top-end"
+            } = c;
+            const Toast = Swal.mixin({
+                toast: true,
+                title: msg,
+                position: position,
+                icon: icon,
+                showConfirmButton: false,
+                timer: 3000,
+                timerProgressBar: true,
+                didOpen: (toast) => {
+                    toast.onmouseenter = Swal.stopTimer;
+                    toast.onmouseleave = Swal.resumeTimer;
+                }
+            });
+            Toast.fire({});
+        }
+
+        let success = function (c) {
+            const {
+                msg = "",
+                title = "",
+                footer = ""
+            } = c;
+            Swal.fire({
+                icon: "success",
+                title: title,
+                text: msg,
+                footer: footer
+            });
+        }
+
+        let error = function (c) {
+            const {
+                msg = "",
+                title = "",
+                footer = ""
+            } = c;
+            Swal.fire({
+                icon: "error",
+                title: title,
+                text: msg,
+                footer: footer
+            });
+        }
+
+        async function custom(c) {
+            const {
+                msg = "",
+                title = "",
+            } = c;
+
+            const {value: formValues} = await Swal.fire({
+                title: title,
+                html:msg,
+                focusConfirm: false,
+                backdrop:false,
+                showCancelButton:true,
+                willOpen: () => {
+                    const elem = document.getElementById("reservation-dates-modal");
+                    const rp = new DateRangePicker(elem,{
+                        format:'yyyy-mm-dd',
+                        showOnFocus:true,
+                    })
+
+                },
+                preConfirm: () => {
+                    return [
+                        document.getElementById("start").value,
+                        document.getElementById("end").value
+                    ];
+                },
+                didOpen:() => {
+                    document.getElementById("start").removeAttribute('disabled');
+                    document.getElementById("end").removeAttribute('disabled');
+                }
+            });
+            if (formValues) {
+                Swal.fire(JSON.stringify(formValues));
+            }
+        }
+
+        return {
+            toast,
+            success,
+            error,
+            custom:custom
+        }
+    }
+</script>
+
 </body>
 </html>
