--- a/html-source/majors.html
+++ b/html-source/majors.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet"
           href="https://cdn.jsdelivr.net/npm/vanillajs-datepicker@1.3.4/dist/css/datepicker-bs5.min.css">
     <link rel="stylesheet" type="text/css" href="https://unpkg.com/notie/dist/notie.min.css">
-    <link rel="stylesheet" href="./static/css/styles.css">
+    <link rel="stylesheet" href="../static/css/styles.css">
     <title>Document</title>
 </head>
 <body>
@@ -51,33 +51,6 @@
     </div>
 </nav>
 
-<div class="container">
-
-    <div class="row">
-        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 ">
-            <img src="./static/images/marjors-suite.png" alt="room image" class="img-fluid img-thumbnail w-50 mx-auto d-block">
-        </div>
-    </div>
-
-    <div class="row">
-        <div class="col">
-            <h1 class="text-center mt-4">Majors Suite</h1>
-            <p>
-                Your home away , chemidonam mikhay biya mikhay naya, ma saremon sholughe.
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus dolorum iusto sapiente! Consequatur
-                illum, nisi non praesentium quae quas recusandae vero voluptates! Amet assumenda beatae eos, excepturi
-                itaque magnam optio quia. Accusantium assumenda autem consectetur culpa, dolores enim et eum itaque
-                libero nobis, odio possimus, quis recusandae sequi sunt velit!
-            </p>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col text-center">
-            <a href="/make-reservation-ms" class="btn btn-success">Check Availability</a>
-        </div>
-    </div>
-
-</div>
 
 
 <div class="container-fluid">
